Import of KMX/Acme-KMX-Test-0.011.tar.gz from CPAN.
gitpan-cpan-distribution: Acme-KMX-Test
gitpan-cpan-version:      0.011
gitpan-cpan-path:         KMX/Acme-KMX-Test-0.011.tar.gz
gitpan-cpan-author:       KMX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -17,5 +17,12 @@ no_index:
   directory:
     - t
     - inc
+provides:
+  Acme::KMX::Pokus1:
+    file: GENERATED/Pokus1.pm
+  Acme::KMX::Pokus2:
+    file: GENERATED/Pokus2.pm
+  Acme::KMX::Test:
+    file: lib/Acme/KMX/Test.pm
 requires: {}
-version: 0.010
+version: 0.011
